[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "1.0.1"
edition = "2024"
rust-version = "1.90"
authors = ["Birch"]
license = "MIT"
homepage = "https://github.com/birchrust/polymarket-kit.git"
repository = "https://github.com/birchrust/polymarket-kit.git"
exclude = ["tests"]


[workspace.lints.rust]
missing-debug-implementations = "warn"
unreachable-pub = "warn"
unused-must-use = "deny"
rust-2018-idioms = "deny"
unnameable-types = "warn"

[workspace.lints.rustdoc]
all = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
missing-const-for-fn = "warn"
use-self = "warn"
option-if-let-else = "warn"
redundant-clone = "warn"
large-enum-variant = "allow"
result-large-err = "allow"

[workspace.dependencies]
rust_decimal = { version = "^1.39.0", features = ["serde-str", "serde-float"] }
serde = { version = "^1.0.228", features = ["derive"] }
serde_json = "^1.0.145"
reqwest = { version = "^0.12.4", features = ["json"] }
tokio = { version = "^1.48.0", features = ["full"] }
anyhow = "1.0.100"
alloy-primitives = "1.4.1"
alloy-signer = "1.1.2"
alloy-signer-local = "1.1.2"
alloy-sol-types = "1.4.1"
chrono = { version = "^0.4.42", features = ["serde"] }
clob = { path = "crates/clob", version = "1.0.0" }
endpoints = { path = "crates/endpoints", version = "1.0.0" }
