[package]
name = "clob"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
reqwest = { workspace = true }
anyhow = { workspace = true }
alloy-signer-local = { workspace = true }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-signer = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
rust_decimal = { workspace = true }
rand = "0.9.2"
hmac = "0.12.1"
sha2 = "0.10.9"
base64 = "0.22.1"
