[package]
name = "endpoints"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
chrono = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
rust_decimal = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }

[lints]
workspace = true
